--- a/blog.html
+++ b/blog.html
@@ -395,23 +395,6 @@ now, i have a ( kinda old ) sketch that i painted recently :<br>
 <center><img width="350px" height="auto" src="https://i.imgur.com/7Dv7HG3.png"/></center>
 </font></font></font>
 <br>
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_i2941852109022_"><img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_i29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1o_IAogdd_kDH1FwBcByBYQNVMWCN2GQ3"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_i2941852109222_"><img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_i29418521092322_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1MSTPoxRVdPHY6HPnXIth5uwoOQcpzbMQ"></script>
-</font></font>
-</div>
-</body></center>
 
 <font size = 1><font color="#B1A69E">
 <br><br>
@@ -425,23 +408,6 @@ chillarmy ♡<br>
 <center><img width="300px" height="auto" src="https://i.imgur.com/soM5ku8.png"/></center>
 </font></font></font>
 <br>
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_i294185210903_"><img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_i2941852109023_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1OoOzfvhJu7a_E4JBZ1AADvX7SGVQ_z-2"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_i2941852109233_"><img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_i29418521092333_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1maHtxjhmBzZ-MoDnuCVixLtryg8M0i0E"></script>
-</font></font>
-</div>
-</body></center>
 
 <font size = 1><font color="#B1A69E">
 <br><br>
@@ -452,7 +418,7 @@ so today what's going to be double !<br>
 the first text is about something i felt the need to talk about but that is not reeeally a subject : about my arguments in my texts in general.<br>
 then i also wrote about a second subject : immigration. this topic seems to be "feared" by some people nowadays, but i think it's relevant to talk about it because it's in some way a reality in my life and will also include information about my future plans that you were curious about, so let's just get into it <img src="https://i.imgur.com/j9db2cK.gif"/><br>
 <br><br>
-<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
 <br><br>
 　ⅰ.<br>
 people who read my huge texts here may notice that my arguments for all subjects have some patterns, i might say, characteristic of me.<br>
@@ -480,27 +446,8 @@ well, that's it, i hope i've expressed myself clearly !!<br>
 xoxo <img src="https://i.imgur.com/OYsjUtj.gif"/><br>
 <br><br>
 </font></font></font>
-<br>
 
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_2941852109022_"><img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1KDXrJLZNWWSx0Adlke1bwjYS6oJ5z4Fz"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_2941852109222_"><img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_29418521092322_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1GqSKeuKg2H7AJ5TWwWS25-CYjtv_vBzX"></script>
-</div>
-</font></font>
-</div>
-</body>
-<br><br><br><br><br><br><br>
+<br>
 
 <center><img src="https://i.imgur.com/tpBWv2N.png"/></center>
 
@@ -544,23 +491,6 @@ enough of talking, today the post will have a super cute drawing that i painted 
 <center><img width="350px" height="auto" src="https://i.imgur.com/rXW8KJl.png"/></center>
 </font></font></font>
 <br>
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_i29418521090_"><img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_i294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1YwAbkVkF9sWD7bMyGJnvcpq7q_fIwlVP"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_i29418521092_"><img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_i294185210923_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1FM8RBL3XH6h4RF38U_-BWArsPaiEK3HU"></script>
-</font></font>
-</div>
-</body></center>
 
 <font size = 1><font color="#B1A69E">
 <br><br>
@@ -570,7 +500,7 @@ i know that compared to the last posts full of content this seems a little bit m
 today's q&a is something sweet and positive for you ♡<br>
 hmnfg i hope it doesn't seem pretentious or anything like that <img src="https://i.imgur.com/HUaeQ0l.gif"/><br>
 <br><br>
-<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
 <br><br>
 have you ever seen people who are so beautiful, kind and have a lovely aura that makes everyone feel comfortable and safe around ? it seems like a rare and precious personality trait, like this person knows nothing bad and lives in a beautiful and different reality.<br>
 in fact, i have learned over time that this is a skill to be acquired with maturity. bad experiences don't influence who you really are and shouldn't make you have a heavy and sad aura. bad experiences happen for you to mature and to be able to avoid them in the future, as well as helping other people in a similar situation ; traumas are not part of you, all bad things you've been through, you've seen or just know that exist, none of that is part of you and none of that represents your reality.<br>
@@ -584,27 +514,8 @@ remember : the kinder you are, the more beautiful you become ( and that includes
 xoxo <img src="https://i.imgur.com/US4BOYk.gif"/><br>
 <br><br>
 </font></font></font>
-<br>
 
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_29418521090_"><img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=18y23IggJC5PR9ySQ_bzcFMC4AQXyfjRA"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_29418521092_"><img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_294185210923_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1O_9WVX5rEcIlOEn90L8a5KnG7SbYvqcr"></script>
-</div>
-</font></font>
-</div>
-</body>
-<br><br><br><br><br><br><br>
+<br>
 
 <center><img src="https://i.imgur.com/4DUjsh7.png"/></center>
 
@@ -632,26 +543,9 @@ it's so fun to make these collages, i really want to do it often, if you support
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/Wtz6hr6.png"/></center>
 <br><br>
-<center><a href="https://mega.nz/#!A5phyTBB!ZKAFVU7KRvondJO-1pIupULt8-9dmoVDU0_BySUarsM" id="linkbjinho" target="_blank">honey morning html .rar</a></center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!A5phyTBB!ZKAFVU7KRvondJO-1pIupULt8-9dmoVDU0_BySUarsM" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">honey morning html .rar</font></a>　</center>
 </font></font></font>
 <br>
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_a29418521090_"><img width="20px" height="auto" src="https://i.imgur.com/omE4Ax3.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_a294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1CVVtvjV3kwurOkMEgdinLaokshL_6Hlx"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_a29418521092_"><img width="20px" height="auto" src="https://i.imgur.com/SJEUa0i.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_a294185210923_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=11ipbQnAfWORGWFgvB7ahgVoW0Zi_v3hB"></script>
-</font></font>
-</div>
-</body></center>
 
 <font size = 1><font color="#B1A69E">
 <br><br>
@@ -660,27 +554,9 @@ do you think i'm doing well ?<br>
 <br>
 the melody i used this time was this one :<br>
 <br><br>
-
-<center><a href="https://files.catbox.moe/jw1bqb.mp3" id="linkbjinho" target="_blank">toy chest .mp3</a></center>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/jw1bqb.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">toy chest .mp3</font></a>　
+</center>
 </font></font></font>
-<br>
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_m2941852109022_"><img width="20px" height="auto" src="https://i.imgur.com/7zvWsMq.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_m29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1-Cdhk9H4vMilcJQHxmhNtPr56J4lILrp"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_m2941852109222_"><img width="20px" height="auto" src="https://i.imgur.com/5w5TqhO.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_m29418521092322_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1rW-u1fmgxuOUDXxwlDGui_SeBH4hmiPr"></script>
-</font></font>
-</div>
-</body></center>
 
 <font size = 1><font color="#B1A69E">
 <br><br>
@@ -693,26 +569,9 @@ so i started to make a html page that was comfortable to store them, organizing 
 
 <center><img width="350px" height="auto" src="https://i.imgur.com/HlNhsmu.png"/></center>
 <br><br>
-<center><a href="https://mega.nz/#!thQlUCaJ!fwCyd7-WSQef4_EtxfKdrVVNRlFT44mV6m6-5vaMzEI" id="linkbjinho" target="_blank">virtualstuffie .rar</a></center>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!thQlUCaJ!fwCyd7-WSQef4_EtxfKdrVVNRlFT44mV6m6-5vaMzEI" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">virtualstuffie .rar</font></a>　</center>
 </font></font></font>
 <br>
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_a294185210903_"><img width="20px" height="auto" src="https://i.imgur.com/omE4Ax3.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_a2941852109023_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Ih3MJMTtZ4GN4vWSs8ovvPwLq9sNJh3B"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_a2941852109233_"><img width="20px" height="auto" src="https://i.imgur.com/SJEUa0i.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_a29418521092333_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1iS2kaCa05aoBqArKrl1IhdSOC1eQhKjM"></script>
-</font></font>
-</div>
-</body></center>
 
 <font size = 1><font color="#B1A69E">
 <br><br>
@@ -724,7 +583,7 @@ it is a very complicated subject, but i know what i'm going to say here is a goo
 will i really be able to help someone with these words ? <img src="https://i.imgur.com/gy3kOEy.gif"/><br>
 i wish from the bottom of my heart !<br>
 <br><br>
-<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
 <br><br>
 i know that the pursuit of self-knowledge is something that never ends, but i, being young, realize that young people usually seek to be special in some way, seeking individuality. the thing is that we are all different and have individualities already, if you don't know which ones you can't enjoy this right, you can't be yourself and improve, so you just become artificial and sad. adults also don't usually know who they are, they just let it go, it makes them more and more faded, which is extremely sad. feeling dissociated and not knowing who you are is a bad feeling and should not be taken to life, so i will try to help you by saying how i managed to understand who i really am and my individuality, i hope it can help some of you too !<br>
 something that helped me a lot to understand who i am were the aesthetics. i know this is a very recent term and it may seem rather silly and superficial, but you can call it other things too, since it has always existed : style, spectrum, tendency, essence.. i like to call it aesthetics because i am quite visual, but you must understand that what i mean by that is the essence of who you are, represented through visuals, personality, lifestyle, passions and others.<br>
@@ -741,27 +600,8 @@ i hope my words are useful ///<br>
 xoxo <img src="https://i.imgur.com/lbl3mss.gif"/><br>
 <br><br>
 </font></font></font>
-<br>
 
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_294185210903_"><img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_2941852109023_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1yfCV1coQrcIqdA2Q2pBkwsrSuJuI0Twr"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_2941852109233_"><img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_29418521092333_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1rofe5bc4XezQiygoCNbxLiGF2F4bEmRf"></script>
-</div>
-</font></font>
-</div>
-</body>
-<br><br><br><br><br><br><br>
+<br>
 
 <center><img src="https://i.imgur.com/68tgLBE.png"/></center>
 
