--- a/tiny-journal.html
+++ b/tiny-journal.html
@@ -344,64 +344,21 @@ position: relative;
 <br><img style="float: left; position: absolute; left: 130px;"src="https://i.imgur.com/5ARRRL8.gif"><img style="float: right; position: absolute; right: 130px;"src="https://i.imgur.com/PiKlmsA.gif"><br><br><br>
 
 <center><div style="background-color:rgba(252, 252, 252, 0.6); width: 250px;height: 325px;overflow-x: hidden; padding: 5px;"><br><br>
-<center><img src="https://i.imgur.com/j28Ryxf.gif"></center><br>
+<center><img width="60px" height="auto" src="https://i.imgur.com/QCT42Bu.png"></center><br>
 <center><font color="#A69C95">{ tiny journal }</font>
-<br><br>
-<img width="60px" height="auto" src="https://i.imgur.com/QCT42Bu.png">
+<br>
 <br>
 <font color="#97AC93">
-oh, hi ! i'm the newspaper little boy, and here you can read the best and most important news of the universe !!! don't forget to leave your ratings !<br>
-i'm here every week, <strike>i guess</strike> !!
+oh, hi ! i'm the newspaper little boy, and here you can read the best and most important texts of the universe !!!<br>
+enjooooy ~<br>
 </font>
 <br><br>
-<br><style>
-p { margin: 0; }
-.spoiler-area {
 
-}
-.spoiler-area.is-closed { height: 0; overflow: hidden; padding: 10px 0 0; }
-</style>
-</head>
-<body>
+<div style="font-family: Verdana; font-size:8px;"><img src="https://i.imgur.com/Djl16gZ.gif"/>　<a href="https://photos.app.goo.gl/jtr5rqe0kge2UYs53"target="_blank"><font color="#624646">archive</a></font>　<img src="https://i.imgur.com/Djl16gZ.gif"/></div>
 
-<div style="font-family: Verdana; font-size:8px;"><font color="#624646"><img src="https://i.imgur.com/Djl16gZ.gif"/>　<a data-target="spoiler1" class="btn-spoiler">+ click</a></font>　<img src="https://i.imgur.com/Djl16gZ.gif"/></div>
-<div id="spoiler1" class="spoiler-area is-closed">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<div style="font-family: Verdana; font-size:8px;"><font color="#B49797">there are 5 texts once, check the archive right <a href="https://photos.app.goo.gl/jtr5rqe0kge2UYs53"target="_blank"><font color="#E67474">here</font></a> !</font></div>
-
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
-
-<script>
-(function(){
-    "use strict";
-    var $btns = document.querySelectorAll('.btn-spoiler');
-    function loop($els, cb) {
-        var i = $els.length;
-        while(i--) {
-            cb($els[i]);
-        }
-    }
-    loop($btns, function($btn){
-        $btn.addEventListener("click", function(){
-            var $spoiler = document.getElementById(this.getAttribute("data-target"));
-            if( this.innerHTML === "+ click" ){
-                this.innerHTML = "- hide";
-                $spoiler.classList.remove("is-closed");
-            } else {
-                this.innerHTML = "+ click";
-                $spoiler.classList.add("is-closed");
-            }
-        });
-
-    });
-
-}());
-</script>
-
-<br><br>
 </center>
 
+<br><br><br>
 
 <div style="text-align:left">
 <center><font color="#b7aba8">
@@ -419,32 +376,13 @@ september . 13 . 2018<br>
 <br><br>
 </font>
 
-<div style="float: right; ">
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109033_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t29418521090233_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1AnEqHtXFVTe_cs4J_2Mtm7fE4tnXfAZA"></script>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109233_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t29418521092333_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=11EqopSwTBxplE8V6DAGMxLOIkUaOB6lz"></script>
-</font></font>
-</div>
-</div>
-</div>
-</body>
-</div>
 
 
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
 
 
-
-<br><br><br><br><br><br><br><br>
 <div style="text-align:left">
 <center><font color="#B5A3A3">
 <img src="https://i.imgur.com/QLXV4LE.gif"><br><br>
@@ -473,28 +411,12 @@ june . 27 . 2018<br>
 <br><br>
 </font>
 
-<div style="float: right; ">
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109022_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t29418521090222_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1yN8djyCwtd-4XK7EcKJ0QPqxhFv1iqtB"></script>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109222_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t29418521092322_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1JqQRifQq_nO3TonotQQGvGCc6L2v-t8l"></script>
-</font></font>
-</div>
-</div>
-</div>
-</body>
-</div>
 
-<br><br><br><br><br><br><br><br>
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+
 <div style="text-align:left">
 <center><font color="#CFA5A5">
 <img src="https://i.imgur.com/1p8cFQf.gif"><br><br>
@@ -518,28 +440,11 @@ june . 03 . 2018<br>
 </font>
 
 
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t29418521090_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t294185210902_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1IQGAxr6mS53gZRo4hhDv14Q9lHeoz5nz"></script>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t29418521092_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t294185210923_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1JGJfGvMIMh_Mr-UYwWPYM7tBgi-qOftB"></script>
-</font></font>
-</div>
-</div>
-</div>
-</body>
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
 
 
-
-<br><br><br><br><br><br><br><br>
 <div style="text-align:left">
 <center><font color="#93B3A9">
 <img src="https://i.imgur.com/OFc43OT.gif"><br><br>
@@ -558,31 +463,13 @@ march . 09 . 2018<br>
 　　i want to love you !!!<br><br>
 </font>
 
-<div style="float: right; ">
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109055_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t29418521090255_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1fu4w8A0aE4yJ2TCROSA54_LmvpbayqVI"></script>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109255_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t29418521092355_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1XhfqoJFP0gzcoj2tUEs7Pc9D6XBCau1Y"></script>
-</font></font>
-</div>
-</div>
-</div>
-</body>
-</div>
 
 
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
 
 
-<br><br><br><br><br><br><br><br>
 <div style="text-align:left">
 <center><font color="#b7aba8">
 <img src="https://i.imgur.com/9v2tHpo.gif"><br><br>
@@ -602,35 +489,9 @@ november . 22 . 2017<br>
 <br><br>
 </font>
 
-<div style="float: right; ">
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109044_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t29418521090244_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1h7qn2Sdn2g-1UjMpxZzVHL2YpTPyKVzh"></script>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109244_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t29418521092344_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1K_B2eOGk4t0HOV39-3u_7D6VM3TqburA"></script>
-</font></font>
-</div>
-</div>
-</div>
-</body>
-</div>
 
 
 
-
-
-
-
-
-<br><br><br><br>
 
 
 </div>
